readd to apply gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -60,32 +60,32 @@ app.*.symbols
 app.*.map.json
 
 # iOS/macOS/XCode related
-*.mode1v3
-*.mode2v3
-*.moved-aside
-*.pbxuser
-*.perspectivev3
-*sync/
-.sconsign.dblite
-.tags*
-.vagrant/
-DerivedData/
-Icon?
-Pods/
-.symlinks/
-profile
-xcuserdata
-.generated/
-**/Flutter/App.framework
-**/Flutter/Flutter.framework
-**/Flutter/Generated.xcconfig
-**/Flutter/ephemeral
-**/Flutter/app.flx
-**/Flutter/app.zip
-**/Flutter/flutter_assets/
-**/Flutter/flutter_export_environment.sh
-ServiceDefinitions.json
-GeneratedPluginRegistrant.*
+**/ios/**/*.mode1v3
+**/ios/**/*.mode2v3
+**/ios/**/*.moved-aside
+**/ios/**/*.pbxuser
+**/ios/**/*.perspectivev3
+**/ios/**/*sync/
+**/ios/**/.sconsign.dblite
+**/ios/**/.tags*
+**/ios/**/.vagrant/
+**/ios/**/DerivedData/
+**/ios/**/Icon?
+**/ios/**/Pods/
+**/ios/**/.symlinks/
+**/ios/**/profile
+**/ios/**/xcuserdata
+**/ios/.generated/
+**/ios/Flutter/App.framework
+**/ios/Flutter/Flutter.framework
+**/ios/Flutter/Generated.xcconfig
+**/ios/Flutter/ephemeral
+**/ios/Flutter/app.flx
+**/ios/Flutter/app.zip
+**/ios/Flutter/flutter_assets/
+**/ios/ServiceDefinitions.json
+**/ios/Runner/GeneratedPluginRegistrant.*
+**/ios/Flutter/flutter_export_environment.sh
 
 # Exceptions
 !default.pbxuser
